--- a/index.html
+++ b/index.html
@@ -205,13 +205,16 @@
     <div>
       <h1>Cybersecurity Analyst</h1>
       <p class="tagline">SIEM • Endpoint Telemetry • SOC Investigations • Compliance (NIST, SOX ITGC)</p>
-
-      <!-- Removed duplicate paragraph, aligned to your resume -->
+      
       <p class="summary">
-        Cybersecurity Analyst with hands-on experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations.
-        Built Elastic SIEM pipelines with Sysmon and Zeek telemetry and performed Windows security audits aligned with MITRE ATT&amp;CK.
-        M.S. Cybersecurity Technology (UMGC, GPA 4.0; President’s List).
-      </p>
+  Cybersecurity Analyst with hands-on experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations.
+  Built Elastic SIEM pipelines with Sysmon and Zeek telemetry and performed Windows security audits aligned with MITRE ATT&amp;CK.
+  M.S. Cybersecurity Technology (UMGC, GPA 4.0; President’s List).
+</p>
+
+<p class="summary">
+  Founder &amp; Cybersecurity Consultant — Nikki IT &amp; Security Consulting (Dec 2025–Present).
+</p>
 
       <div class="cta">
         <!-- Main buttons row -->
