Update profile image source path in index.html

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
   <!-- Hero -->
   <section class="hero">
-    <img class="headshot" src="profile.jpg" alt="Niknaz Sadehvandi" />
+    <img class="headshot" src="assets/profile.jpg" alt="Niknaz Sadehvandi" />
 
     <div>
       <h1>Cybersecurity Analyst</h1>
